<resources>
    <string name="app_name">Tensuu</string>
    <string name="title_users">Users</string>
    <string name="title_activity_feed">Activity Log</string>
    <string name="title_students">Students</string>
    <string name="title_lists">Lists</string>
    <string name="title_period">Period</string>
    <string name="title_my_points">My Points</string>
    <string name="title_reports">Reports</string>
    <string name="title_add_point">Add Point</string>
    <string name="title_add_student">Add Student</string>
    <string name="title_edit_student">Edit Student</string>
    <string name="title_add_user">Add User</string>
    <string name="title_edit_user">Edit User</string>
    <string name="title_list_name">List Name</string>

    <string name="title_weekly">Weekly</string>
    <string name="title_custom">Custom</string>

    <string name="title_admin_tools">Admin Tools</string>

    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_rename">Rename</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_go_to_student">Go To Student</string>

    <string name="title_add_points">Add Points</string>
    <string name="title_add_period">Add Period</string>

    <string name="add_multiple">Add multiple</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password (Confirm)</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="full_name">Full name</string>
    <string name="save">Save</string>

    <string name="amount">Amount</string>
    <string name="student">Student</string>
    <string name="reason_optional">Reason (Optional)</string>

    <string name="admin">Administrator</string>
    <string name="can_modify">Can Make Modifications</string>

    <string name="search">Search</string>

    <string name="points">Points</string>

    <string name="id">ID</string>
    <string name="smart_school_id">Smart School ID</string>
    <string name="grade">Grade</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="floor">Floor</string>

    <string name="date">Date</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>

    <string name="week_of_s">Week of %s</string>

    <string name="year_x">Year %s</string>

    <string name="created_by_x">Created by %s</string>

    <string name="second_floor">2nd Floor</string>
    <string name="third_floor">3rd Floor</string>
    <string name="question_floor">\? Floor</string>

    <string name="x_students">%1$d students</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="no_points">No points</string>
    <string name="no_points_you_havent_added">You haven\'t added any points yet.\nTap the <b>+</b> button!</string>
    <string name="no_points_student_has_no_points">Looks like this student is crystal clean</string>

    <string name="no_lists">No lists</string>
    <string name="no_lists_tap_plus_to_create">There are no lists yet.\nTap the <b>+</b> button to create one!</string>

    <string name="no_students">No students</string>
    <string name="no_students_in_list_tap_plus_to_add">There are no students in this list yet.\nTap the <b>+</b> button to add!</string>

    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_invalid_password_not_matched">Passwords don\'t match</string>
    <string name="error_invalid_name">Invalid name</string>

    <string name="error_invalid_amount">Invalid amount</string>
    <string name="error_invalid_student">Invalid student</string>

    <string name="error_invalid_ssid">Invalid Smart School ID</string>
    <string name="error_invalid_first_name">Invalid first name</string>
    <string name="error_invalid_last_name">Invalid last name</string>
    <string name="error_invalid_grade">Invalid grade</string>

    <string name="title_sign_out_question">Sign Out?</string>
    <string name="info_are_you_sure_sign_out">Are you sure you want to sign out?</string>

    <string name="info_showing_x_to_y">Showing %1$s to %2$s</string>

    <string name="info_connecting_to_server">Connecting to server…</string>
    <string name="info_connected_to_server">Connected to server</string>
    <string name="error_connecting_to_server_x">Error connecting to server - %s</string>
    <string name="error_signing_in">Error signing in…</string>
    <string name="error_invalid_user">The specified user doesn\'t exist</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_couldnt_update_name">Error updating name. Please try again.</string>
    <string name="error_couldnt_find_user">Couldn\'t find user</string>
    <string name="error_couldnt_find_student">Couldn\'t find student</string>

    <string name="share_student_points">Dormitory points for %1$s:\n%2$s\nTotal: %3$s</string>

    <string name="x_added_y_points_to_z"><![CDATA[<b>%1$s</b> added <b>%2$s</b> points to <b>%3$s</b>]]></string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="privacy_private">Private</string>

    <string name="retry">Retry</string>

    <string name="floating_action_button_scroll_behavior">tr.xip.scd.tensuu.ui.common.view.ScrollAwareFabBehavior</string>
</resources>