<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/amountLayout"
            android:layout_width="56dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberSigned"
                android:nextFocusDown="@+id/to"
                android:nextFocusRight="@+id/to"
                android:text="-">

                <requestFocus />
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/toLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student"
                android:inputType="textAutoComplete"
                android:nextFocusDown="@+id/reason"
                android:nextFocusLeft="@+id/amount"
                android:nextFocusRight="@+id/reason" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical"
            android:hint="@string/date"
            android:inputType="datetime"
            android:longClickable="false"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reason_optional"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textAutoComplete"
            android:nextFocusLeft="@+id/to" />
    </android.support.design.widget.TextInputLayout>

    <tr.xip.scd.tensuu.common.ui.widget.VectorCompatTextView
        android:id="@+id/addMultiple"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="-4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_dark"
        android:drawablePadding="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/add_multiple"
        android:textAllCaps="true"
        app:drawableLeftCompat="@drawable/ic_people_grey_24dp" />
</LinearLayout>